k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: smart-factory
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
